--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <!--    <link rel="stylesheet" href="style/style.css" />-->
     <script src="bower_components/angular/angular.min.js"></script>
       <script src="bower_components/lodash/lodash.js"></script>
+      <script src="bower_components/moment/moment.js"></script>
     <script src="app.js"></script>
   </head>
 
@@ -16,8 +17,16 @@
       <input type="text" ng-model="user_in_url" required>
           <input type="submit" name="Submit">
       </form>
-    <p>Open Issues {{issues.length}}</p>
-    <div>
+      <div id="data" ng-if="issues.length">
+      <p>Open Issues {{issues.length}}</p>
+      <p>Issues Open Last day {{yesterday}}</p>
+      <p>Issues Open Last week {{pastweek}}</p>
+      <p>Issues Open Last month {{pastmonth}}</p>
+      </div>
+      <div id="message" ng-if="display_messag">
+          <p ng-repeat="message in message_pipe track by $index">{{message}}</p>
+      </div>
+        <div>
     </div>
   </body>
 </html>
